--- a/Projects/Project_Lab/www/stocks.html
+++ b/Projects/Project_Lab/www/stocks.html
@@ -13,7 +13,7 @@
    <meta charset="utf-8" />
    <meta id="viewport" content="width=device-width, initial-scale=1.0">
    <title>Project 01_11_03</title>
-   <link rel="stylesheet" href="styles.css" />
+   <link rel="stylesheet" href="StockStyles.css" />
    <script src="modernizr.custom.65897.js"></script>
 </head>
 
@@ -67,7 +67,7 @@
          <img id="chart" src="" alt="Stock line chart from Yahoo.com." />
       </figure>
    </article>
-   <script src="script.js"></script>
+   <script src="StockScript.js"></script>
 </body>
 
 </html>
